<resources>
    <string name="app_name">LaundryApp</string>
    <string name="appTitle">LaundryApp</string>
    <string name="main_DaxilOl_tv">Daxil ol</string>
    <string name="main_Qeydiyyat_tv">Qeydiyyat</string>
    <string name="main_Haqqimizda_tv">Haqqimizda</string>
    <string name="main_Cixish_tv">Çixis</string>
    <string name="app_Haqqinda_title">LaundryApp haqqında</string>
    <string name="app_Haqqinda_text">LaundryApp insanların vaxtına və büdcəsinə qənaət edərək şəxsi geyim əşyalarının
        quru və kimyəvi təmizlənməsinə yardım edən mobil proqram təminatıdır. Siz bu mobil tətbiq vasitəsilə sifarişi
        yaradaraq geyimlərinizi təmizlənməsi üçün şəhərin müxtəlif nöqtələrində yerləşdirilən avtomatlaşdırılmış seyflərə
        yerləşdirirsiniz. Seçdiyiniz təmizlənmə növünə görə geyimləriniz son dərəcə müasir üsullarla təmizlənir.
        Geyimlər təmizləndikdən sonra sizə ən yaxın olan məntəqəmizdə boş qutuya yerləşdirilir və siz bu barədə dərhal
        LaundryApp mobil tətbiqi vasitəsilə məlumat alırsınız. LaundryApp sizin şəxsi əşyalarınızın təhlükəsizliyini qorumaq
        üçün maksimum müdafiə üsullarından istifadə edir.
    </string>
    <string name="qeydiyyat_title">Qeydiyyat</string>
    <string name="qeydiyyat_ad_tv">*Ad:</string>
    <string name="qeydiyyat_soyad_tv">*Soyad:</string>
    <string name="qeydiyyat_email_tv">*E-mail:</string>
    <string name="qeydiyyat_telefon_tv">*Telefon:</string>
    <string name="qeydiyyat_unvan_tv">*Ünvan:</string>
    <string name="qeydiyyat_shifre_tv">*Şifrə:</string>
    <string name="qeydiyyat_pinkod_tv">*Pin kod:</string>
    <string name="qeydiyyat_btn_text">Qeydiyyat</string>
    <string name="qeydiyyat_checkbox_text">Qaydalarla tanış oldum və qəbul edirəm.</string>
    <string name="daxilol_title">Login</string>
    <string name="daxilol_emailtelefon_tv">E-mail və ya telefon:</string>
    <string name="daxilol_shifre_tv">Şifrə:</string>
    <string name="daxilol_unudulmushShifre_tv"><u>Şifrəni unutmusan?</u></string>
    <string name="home_yeni_sifarish_tv">Yeni sifariş</string>
    <string name="home_sifarishler_tv">Sifarişlər</string>
    <string name="home_sifarish_izle_tv">Sifariş izlə</string>
    <string name="home_odenish_tv">Ödəniş</string>
    <string name="home_personalinfo_tv">Şəxsi məlumatlar</string>
    <string name="home_feedback_tv">Şikayət və təklif</string>
    <string name="home_ayarlar_tv">Tənzimləmələr</string>
    <string name="home_chixish_tv">Çıxış</string>
    <string name="yenisifarish_title">Yeni sifariş</string>
    <string name="yenisifarish_paltarsayi_tv">Paltar sayı</string>
    <string name="yenisifarish_achiqlama_tv">Açıqlama</string>
    <string name="yenisifarish_menteqe_tv">Məntəqə</string>
    <string name="yenisifarish_sifarishnovu_tv">Sifariş növü</string>
    <string name="yenisifarish_icramuddeti_tv">İcra müddəti</string>
    <string name="yenisifarish_qeyd_tv">Qeyd</string>
    <string name="yenisifarish_btn_text">Sifariş ver</string>
    <string name="ad_soyad_tv">Ad Soyad</string>
    <string name="personal_info_tv">Məlumatları dəyiş</string>
    <string name="personal_info_locker_tv">Şifrəni və Pin kodu dəyiş</string>
    <string name="tenzim_bildirish_tv">Bildiriş</string>
    <string name="tenzim_dilideyish">Dili dəyiş</string>
    <string name="tenzim_haqqimizda_tv">Haqqımızda</string>
    <string name="Daxil_ol_btn_txt">Daxil ol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
